# kadeploy-v2

./: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  avalanche.beam  chain.beam  chain.erl  create_kadeploy-2.1.5-archive.sh  create_kadeploy-archive.sh  machines  nodes  taktuk-1200.out  taktuk.out
branches/2.1.2/: ChangeLog  INSTALL  README  configure  configure.in
branches/2.1.2/Documentation/latex/: Makefile  db_description.tex
branches/2.1.2/Documentation/sgml/: HOWTO-DEPLOY.sgml
branches/2.1.2/cmd/: Makefile.am  Makefile.in  kaaddnode  kaadduser  kaconsole  kadatabase  kadeluser  kadeploy  kaenvironments  kanodes  kareboot  karecordenv  kasetup  kasudowrapper.sh  katftp  make-preinstall-fdisk
branches/2.1.2/cmd/libkadeploy2/: bootlib.pm  conflib.pm  deploy_iolib.pm  envlib.pm  nodes.pm
branches/2.1.2/man/: Makefile.am  Makefile.in
branches/2.1.2/man/man1/: Makefile  Makefile.am  Makefile.in  clusternodes.conf.1  clusterpartition.conf.1  deploy.conf.1  deploy_cmd.conf.1  kaadduser.1  kaconsole.1  kacreateenv.1  kadatabase.1  kadeploy.1  kaenvironments.1  kanodes.1  karecordenv.1  kasetup.1
branches/2.1.2/man/src/: Makefile  clusternodes.conf.xml  clusterpartition.conf.xml  deploy.conf.xml  deploy_cmd.conf.xml  kaaddnode.xml  kaadduser.xml  kaconsole.xml  kacreateenv.xml  kadeploy-environment.xml  kadeploy.xml  kaenvironments.xml  kanodes.xml  kareboot.xml  karecordenv.xml  kasetup.xml  katftp.xml
branches/2.1.2/share/: Makefile.in
branches/2.1.2/share/mysql/: Makefile.am  create_db_deploy.sql
branches/2.1.2/tools/: Makefile.am
branches/2.1.2/tools/Mcat/: Makefile  Makefile.in  mcat_rsh.pl  mcat_ssh.pl  mcatseg  mcatseg.c
branches/2.1.2/tools/cookbook/: Makefile
branches/2.1.2/tools/cookbook/conf/: Makefile  Makefile.am  Makefile.in  clusternodes.conf  clusterpartition.conf  deploy.conf  deploy_cmd.conf  oar_epilogue  sudowrapper.sh
branches/2.1.2/tools/kasudowrapper/: Makefile  Makefile.am  kasudowrapper.sh
branches/2.1.2/tools/libboot/grub/: Makefile  Makefile.am
branches/2.1.2/tools/libboot/pxelinux/: Makefile
branches/2.1.2/tools/pre_post_script/: pre_install.tgz
branches/2.2/: AUTHORS  ChangeLog  Makefile.am  README  README-PACKAGER  TODO  configure.in  distall.sh
branches/2.2/Documentation/: Makefile.am
branches/2.2/Documentation/docbook/: refmanual.xml
branches/2.2/Documentation/docbook/chapitre/: casutilisation.xml  classeenvironment.xml  commande.xml  commandeadministrateur.xml  commandesyntaxe.xml  commandeutilisateur.xml  howto.xml  intro.xml  modelisationdonnee.xml  schemaclasseenvironment.xml  schemaglobal.xml  (+3 more)
branches/2.2/Documentation/txt/: API  ROADMAP
branches/2.2/cmd/: Makefile.am  kaconsole  kaenvironments  kasetup
branches/2.2/cmd/libkadeploy2/: conflib.pm  deploy_iolib.pm
branches/2.2/lib/: Makefile.am
branches/2.2/lib/environment/: Makefile.am  dd  dd.pm  linux  linux.pm  windows
branches/2.2/lib/floppy/: Makefile.am
branches/2.2/lib/pm/: Makefile.am  bootlib.pm  checknodes.pm  command.pm  conf.pm  conflib.pm  connector.pm  deploy_iolib.pm  deployconf.pm  deployment.pm  device.pm  disk.pm  environment.pm  grub.pm  kachecknodes.pm  kadeployenv.pm  kaenv.pm  kamcat.pm  kanodes.pm  kapart.pm  kapxe.pm  kareboot.pm  karights.pm  message.pm  nmap.pm  pxelinux.pm  remotecommand.pm  remotecopy.pm  script.pm  sudo.pm
branches/2.2/lib/pxelinux/: Makefile
branches/2.2/libkadeploy2/: Makefile  Makefile.am  command.pm  conf.pm  conflib.pm  deploy_iolib.pm  deployconf.pm  disk.pm  message.pm  nodelist.pm  rights.pm  sudo.pm
branches/2.2/libkadeploy2/environment/: linux
branches/2.2/libkadeploy2/pm/: Makefile.am  checknodes.pm  device.pm  fdiskscript.pm  node.pm  parallelcommand.pm  pxelinux.pm  remotecommand.pm  remoteparallelcommand.pm  right.pm  tftppxe.pm  tools.pm
branches/2.2/man/: Makefile.am  Makefile.in
branches/2.2/man/man1/: Makefile.am
branches/2.2/man/src/: clusternodes.conf.xml  clusterpartition.conf.xml  deploy.conf.xml  kaadduser.xml  kadatabase.xml  kadeploy-environment.xml  kadeploy.xml  kaenv.xml  kanodes.xml  kasetup.xml
branches/2.2/sbin/: deployenv  kachecknodes  kadatabase  kamcat  kanodes  kapart  kapxe  karights  kasetup
branches/2.2/share/mysql/: Makefile  Makefile.am  Makefile.in  patch-kadeploy-2.2.sql  patch-kadeploy-2.2.sql~
branches/2.2/tools/: Makefile.am
branches/2.2/tools/Mcat/: Makefile  Makefile.am  Makefile.old  mcatseg.c
branches/2.2/tools/boot/: boot_env.pl
branches/2.2/tools/cookbook/: Makefile  Makefile.am  README
branches/2.2/tools/kasudowrapper/: Makefile
branches/2.2/tools/libboot/: Makefile.am
branches/2.2/tools/migration/: Makefile.am
branches/2.2/tools/sentinelle/: Makefile
tags/2.1.1/tools/Mcat/: Makefile.am  mcatseg
(+1004 files in other folders)
