dnl Process this file with autoconf to produce a configure script.
AC_PREREQ(2.52)
AC_INIT(kadeploy,2.1.2)
AM_INIT_AUTOMAKE(kadeploy, 2.1.2)


AC_PROG_CC
AC_PROG_LN_S


AC_CHECK_PROGS(PERL,perl)
if test [ -z $PERL ]; then echo "perl not found..." ; exit 1 ; fi

AC_CHECK_PROGS(MYSQL,mysql)
if test [ -z $MYSQL ]; then echo "mysql client not found..." ; exit 1 ; fi

AC_CHECK_PROGS(DD,dd)
if test [ -z $DD ]; then echo "dd not found..." ; exit 1 ; fi

AC_CHECK_PROGS(NMAP,nmap)
if test [ -z $NMAP ]; then echo "nmap not found..." ; exit 1 ; fi

AC_CHECK_PROGS(LINUXDOC,linuxdoc)
if test [ -z $LINUXDOC ]; then echo "linuxdoc not found..." ; exit 1 ; fi

AC_CHECK_PROGS(XSLTPROC,xsltproc)
if test [ -z $XSLTPROC ]; then echo "xsltproc not found..." ; exit 1 ; fi

AC_CHECK_PROGS(LATEX2HTML,latex2html)
if test [ -z $LATEX2HTML ]; then echo "latex2html not found..." ; exit 1 ; fi


AC_CONFIG_FILES([Makefile 
		cmd/Makefile 
		cmd/libkadeploy2/Makefile 
		man/Makefile 
		man/man1/Makefile 
		tools/Makefile 
		tools/Mcat/Makefile 
		tools/sentinelle/Makefile 
		tools/bin/Makefile
		tools/boot/Makefile
		tools/cookbook/Makefile
		tools/cookbook/conf/Makefile
		tools/cookbook/scripts/Makefile
		tools/libboot/Makefile
		tools/libboot/pxelinux/Makefile
		tools/libboot/deployment_kernel/Makefile
		tools/libboot/deployment_kernel/x86/Makefile
		tools/libboot/deployment_kernel/x86_64/Makefile
		tools/libboot/grub/Makefile
		tools/pre_post_script/Makefile
		Documentation/Makefile
		share/Makefile
		share/mysql/Makefile
		])

#AC_CONFIG_FILES([Makefile doc/Makefile])
AC_OUTPUT
