dnl Process this file with autoconf to produce a configure script.
AC_PREREQ(2.52)
AC_INIT(kadeploy,2.2)
AM_INIT_AUTOMAKE(kadeploy, 2.2)


AC_PROG_CC
AC_PROG_LN_S


AC_CHECK_PROGS(PERL,perl)
if test [ -z $PERL ]; then echo "perl not found..." ; exit 1 ; fi

AC_CHECK_PROGS(MYSQL,mysql)
if test [ -z $MYSQL ]; then echo "mysql client not found..." ; exit 1 ; fi

AC_CHECK_PROGS(DD,dd)
if test [ -z $DD ]; then echo "dd not found..." ; exit 1 ; fi

AC_CHECK_PROGS(NMAP,nmap)
if test [ -z $NMAP ]; then echo "nmap not found..." ; exit 1 ; fi

AC_CONFIG_FILES([Makefile 
		bin/Makefile 

		sbin/Makefile 

		lib/Makefile 
		lib/environment/Makefile
		lib/pm/Makefile
		lib/floppy/Makefile
		lib/floppy/windows/Makefile
		lib/floppy/grub/Makefile

		man/Makefile 
		man/man1/Makefile 

		tools/Makefile 
		tools/Mcat/Makefile 	
		tools/cookbook/Makefile
		tools/cookbook/conf/Makefile
		tools/libboot/Makefile
		tools/libboot/pxelinux/Makefile
		tools/libboot/grub/Makefile
		tools/migration/Makefile
		tools/pre_post_script/Makefile

		Documentation/Makefile

		share/Makefile
		share/mysql/Makefile
		])

#AC_CONFIG_FILES([Makefile doc/Makefile])
AC_OUTPUT
