kadeploypmdir=$(prefix)/share/perl/5.8/libkadeploy2
kadeploypm_DATA=checknodes.pm cmdline.pm command.pm conflib.pm conf.pm	\
deployconf.pm deploy_iolib.pm device.pm disk.pm disks.pm		\
environment.pm environments.pm fdiskscript.pm hexlib.pm karights.pm	\
message.pm nmap.pm node_cmd.pm nodelist.pm node.pm nodesfile.pm		\
parallelcommand.pm partitionfile.pm partitionscript.pm pxelinux.pm	\
remotecommand.pm remotecopy.pm remoteparallelcommand.pm			\
remoteparallelscript.pm right.pm rights.pm script.pm sudo.pm		\
sudowrap.pm tftppxe.pm tools.pm

EXTRA_DIST=$(kadeploypm_DATA)
