bin_PROGRAMS = mcatseg
mcatseg_SOURCES= AcceptTCPConnection.c CreateTCPServerSocket.c DieWithError.c Makefile.am Makefile.old mcat mcat.pl mcat_rsh.pl mcatseg mcatseg.c mcat_ssh.pl mcat_test.pl TCPCatServer.h
mcatseg_LDFLAGS=-static

bin_SCRIPTS = mcat_ssh.pl mcat_rsh.pl
EXTRA_DIST = $(bin_SCRIPTS)
